@@ -1,0 +1,20 @@
+<h2 class="heading" 
+  tal:define="heading context/get_title"
+  tal:condition="not:request/other/suppress_title | nothing" 
+  tal:content="heading"
+  tal:omit-tag="not:heading">
+  Title
+</h2>
+
+<p class="content-description"
+   tal:define="desc python:context.service_metadata.getMetadataValue(context,'silva-extra','content_description',acquire=0)"
+   tal:condition="desc"
+   tal:content="desc" />
+
+<h3 tal:condition="context/show_container_link">
+ <a tal:define="cont context/get_container"
+    tal:attributes="href cont/absolute_url"
+    tal:content="cont/get_title" />
+</h3>
+<ul tal:replace="structure python:view.render_tree()" />
+
